[gd_scene load_steps=12 format=1]

[ext_resource path="res://Texture/menu/start/menu legno.tex" type="Texture" id=1]
[ext_resource path="res://Scripts/startMenu.gd" type="Script" id=2]
[ext_resource path="res://Texture/menu/start/gioca.tex" type="Texture" id=3]
[ext_resource path="res://Texture/menu/start/opzioni.tex" type="Texture" id=4]
[ext_resource path="res://Texture/menu/start/esci.tex" type="Texture" id=5]
[ext_resource path="res://Sounds/Sample/220207__gameaudio__boot-sound.smp" type="Sample" id=6]
[ext_resource path="res://Sounds/Sample/220208__gameaudio__click-pop-two-part.smp" type="Sample" id=7]
[ext_resource path="res://Sounds/Sample/[No Copyright Music] Ukulele Bells - HookSounds.smp" type="Sample" id=8]
[ext_resource path="res://Sounds/Sample/musica menu.smp" type="Sample" id=9]
[ext_resource path="res://Sounds/Sample/plup.smp" type="Sample" id=10]

[sub_resource type="SampleLibrary" id=1]

samples/220207__gameaudio__boot-sound = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/220208__gameaudio__click-pop-two-part = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }
"samples/[No Copyright Music] Ukulele Bells - HookSounds" = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }
"samples/musica menu" = { "db":0.0, "pitch":1.0, "sample":ExtResource( 9 ) }
samples/plup = { "db":0.0, "pitch":1.0, "sample":ExtResource( 10 ) }

[node name="panelFrame" type="TextureFrame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 1280.0
texture = ExtResource( 1 )
stretch_mode = 0
script/script = ExtResource( 2 )

[node name="start" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 230, 470 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="options" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 210, 700 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="quit" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 270, 960 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 3
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]


